Rechnungen als Vorlage speichern zur späteren Weiterbearbeitung oder Kopie

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -31,6 +31,7 @@
               <li><a href="angebotwhlen-1">Angebot wählen</a></li>
               <li><a href="#kundewhlen-1">Kunde wählen</a></li>
               <li><a href="#reparaturauftragwhlen">Reparaturauftrag wählen</a></li>
+              <li><a href="#alsvorlagespeichern">Als Vorlage speichern</a></li>
             </ul>
           </li>
           <li><a href="#rechnungen-1">Rechnungen</a></li>
@@ -237,6 +238,13 @@
       Durch Klick auf das <em>OK-Icon</em> wird der Auftrag ausgewählt und der Dialog schließt sich.
     </p>
     <p>Durch Wahl des Auftrages wird automatisch der Kunde gewählt.</p>
+    <h4 id="alsvorlagespeichern">Als Vorlage speichern</h4>
+    <p>Um eine Rechnung als Vorlage zu speichern muss ein Kunde gewählt werden.
+    Für allgemeine Vorlagen kann beispielsweise ein Kunde mit dem Namen <em>Vorlagen</em> erstellt werden.</p>
+    <p>Durch Bestätigen der Schaltfläche <em>Als Vorlage speichern</em> wird die Rechnung zum gewählten Kunden zwischengespeichert.
+    In der Kundenansicht kann dieser Kunde gewählt und alle Rechnungsvorlagen über das <em>Vorlagen-Icon</em> angezeigt, weiterbearbeitet oder gelöscht werden.</p>
+    <p>Beim Weiterbearbeiten der Vorlage kann dieser jederzeit als Rechnung gespeichert werden.
+    Dabei ist das Kontrollkästchen <em>Vorlage nach dem Erstellen der Rechnung behalten</em></p>
     <h3 id="rechnungen-1">Rechnungen</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_RECHNUNG_UEBERSICHT</em> benötigt.
       Das Recht <em>RECHNUNG_VERWALTEN</em> wird benötigt um Rechnungen zu bearbeiten oder zu löschen.
@@ -350,6 +358,7 @@
     <p>Durch Klick auf das <em>Plus-Icon</em> kann ein neuer Kunde angelegt werden.
       Durch Klick auf das <em>Reparatur-Icon</em> können alle Reparaturaufträge des Kunden angezeigt werden.
       Durch Klick auf das <em>Euro-Icon</em> können alle Rechnungen des Kunden angezeigt werden.
+      Durch Klick auf das <em>Vorlagen-Icon</em> können zum Kunden gespeicherten Rechnungsvorlagen angezeigt werden.
       Durch Klick auf das <em>Bearbeiten-Icon</em> können die Kundendaten bearbeitet werden.
     </p>
     <p>Durch Klick auf das <em>Duplikat-Icon</em> werden alle Kundendatensätze mit demselben Namen vorgefiltert.
