Reparatur drucken - Buchstabe P oben rechts anzeigen, wenn der Kunde als problematisch markiert wurde

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -157,6 +157,11 @@
       Nach dem Speichern öffnet sich eine neue Seite für den Druck des Auftrages.
       Ebenfalls wird ein Hinweis geöffnet, dass das DSGVO-Informationsblatt vom Kunden zu Unterzeichnen ist, wenn er dies noch nicht getan hat.
     </p>
+    <p>
+      Ist eine Reparatur mit <em>Expressbearbeitung</em> gekennzeichnet, wird in der Druckansicht in der rechten oberen Ecke ein <em>E</em> angezeigt.
+      Ist der zur Reparatur hinterlegte Kunde als problematisch gekennzeichnet, wird in der Druckansicht in der rechten oberen Ecke ein <em>P</em> angezeigt.
+      Beide Markierungen sind miteinander kombinierbar.
+    </p>
     <h4 id="abholdatumzeit">Abholdatum/-zeit</h4>
     <p>Das Abholdatum und die Abholzeit werden dabei automatisch gefüllt.
       Das Standardabholdatum wird dabei auf das Datum in <strong>3</strong>  Werktagen (Samstag ausgenommen) und die Abholzeit auf <strong>16:30 Uhr</strong> gesetzt.
