--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -25,6 +25,7 @@
               </span>
             </td>
             <td width="10%" style="border-right:1px solid #111111; border-left-style: solid; border-left-width:1; border-top-style:solid; border-top-width:1; border-bottom-style:solid; border-bottom-width:1" align="center" height="59">
+                <span class="verdana size7" v-if="entity.kunde.problem">P</span>
                 <span class="verdana size7" v-if="entity.expressbearbeitung">E</span>
             </td>
           </tr>
