Vereinfachtes Öffnen durch Verlinkungen von Rechnungs-, Bestellungs-, Angebots-, Reparatur- und Kundennummer in Tabellen

--- a/src/main/resources/public/bestellung.html
+++ b/src/main/resources/public/bestellung.html
@@ -68,6 +68,7 @@
       </div>
       <messages-box v-bind:text="result" v-if="showDialog" @close="showDialog = false"></messages-box>
       <angebot-suchen-dialog
+        :einstellung-druckansicht-neues-fenster="einstellungDruckansichtNeuesFenster"
         :angebot="entity.angebot"
         :kunde="entity.kunde"
         v-if="showAngebotDialog"
