Auflistung aller Rechnungsvorlagen unter Rechnung - Vorlagen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -35,6 +35,7 @@
             </ul>
           </li>
           <li><a href="#rechnungen-1">Rechnungen</a></li>
+          <li><a href="#rechnungen-vorlagen">Vorlagen</a></li>
           <li><a href="#rechnungen-export">Export</a></li>
         </ul>
       </li>
@@ -279,6 +280,14 @@
       angezeigt werden.
     </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann eine Rechnung nach nochmaliger Bestätigung gelöscht werden.</p>
+    <h3 id="rechnungen-vorlagen">Vorlagen</h3>
+    <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_RECHNUNG_UEBERSICHT</em> benötigt.
+      Das Recht <em>RECHNUNG_VERWALTEN</em> wird benötigt um Vorlagen zu bearbeiten oder zu löschen.
+    </p>
+    <p>Auf dieser Seite befindet sich eine Auflistung aller Rechnungsvorlagen. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
+    <p>Durch Klick auf das <em>Öffnen-Icon</em> kann die Vorlage in der Druckansicht angezeigt werden. Dazu wird das Recht <em>RECHNUNG</em> benötigt.</p>
+    <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann die Vorlage bearbeitet werden.</p>
+    <p>Durch Klick auf das <em>Löschen-Icon</em> kann eine Vorlage nach nochmaliger Bestätigung gelöscht werden.</p>
     <h3 id="rechnungen-export">Export</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_RECHNUNG_EXPORT</em> benötigt.
       Das Recht <em>RECHNUNG_EXPORT</em> wird benötigt, um die Exportieren-Schaltfläche zu aktivieren.</p>
