--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -141,6 +141,10 @@
             <button class="delete btnSmall" :title="$t('kunde.deselektieren')" @click="entity.rechnung.kunde = {}; entity.rechnung.nameDrucken = false;"></button>
             <textarea class="m1" id="rechnungEditForm_kunde" readonly v-model="entity.rechnung.kunde.completeWithAdress"></textarea>
           </div>
+          <div class="m1">
+            <zeichenzaehler-label :elem="entity.rechnung.zusatztext" :forid="'rechnungEditForm_zusatztext'" :label="$t('general.zusatztext')" :maxlength="'500'"></zeichenzaehler-label>
+            <textarea class="m1" id="rechnungEditForm_zusatztext" maxlength="500" :placeholder="$t('general.zusatztextInfo')" v-model="entity.rechnung.zusatztext"></textarea>
+          </div>
           <div class="m1" v-if="entity.rechnung.vorlage">
             <label class="container checkbox">{{ $t("rechnung.vorlageBehalten") }}
               <input id="rechnungEditForm_vorlage_behalten" type="checkbox" v-model="entity.vorlageBehalten" />
