Automatische Reparaturaufträge - FTP-Benutzer und Passwort separat definiertbar
* Nicht mehr aus Verzeichnis 'reparaturen' lesen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -119,6 +119,7 @@
           <li>
             <a href="#roboter">Roboter</a>
             <ul>
+              <li><a href="#roboterftp">FTP-Server</a></li>
               <li><a href="#roboterfiliale">Filiale</a></li>
               <li><a href="#robotercron">Abfrage Cron-Timer</a></li>
               <li><a href="#roboteremail">E-Mail</a></li>
@@ -646,6 +647,11 @@
     </p>
     <p>
       Achtung! Die in diesem Verzeichnis abgelegten Dateien werden unverzüglich verarbeitet.
+    </p>
+    <h4 id="roboterftp">FTP-Server</h4>
+    <p>
+      Die Anmeldung auf dem FTP-Server erfolgt mit der hier angegebenen Benutzer-/Passwortkombination.
+      Die CSV-Dateien müssen dabei direkt im root-Verzeichnis liegen.
     </p>
     <h4 id="roboterfiliale">Filiale</h4>
     <p>
