Automatische Reparaturaufträge - Kunde per Mail über den Erhalt des Gerätes informieren

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -203,6 +203,10 @@
     <p>Durch Klick auf das <em>E-Mail-Icon</em> kann der Kunde informiert werden, dass der Auftrag abgeschlossen ist und dieser in die Filiale kommen soll.
       Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
     </p>
+    <p>Durch Klick auf das <em>Mail-Icon</em> kann der Kunde informiert werden, dass das Gerät per Post eingegangen ist.
+      Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist und es sich um einen automatisch hinterlegten Auftrag handelt.
+      Der Text der E-Mail kann in den Einstellungen im Reiter Roboter definiert werden.
+    </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> wird nach erneuter Bestätigung der Reparaturauftrag komplett gelöscht.</p>
     <h2 id="rechnungen">Rechnungen</h2>
     <p>Die Seite Rechnungen unterteilt sich in die zwei Unterseiten <strong>Erstellen</strong> und <strong>Rechnungen</strong>.</p>
@@ -670,6 +674,14 @@
       Nachdem der Auftrag im System erfolgreich eingelesen wurde und der Kunde eine E-Mail-Adresse angegeben hat, wird eine E-Mail mit dem hier
       angegebenen Text, sowie dem Text aus den allgemeinen Einstellungen <em>E-Mail Signatur</em> versendet.
       Eine Grußformel <em>Mit freundlichen Grüßen</em> muss selbst eingebaut werden, da kein aktiver Mitarbeiter hinter diesem Automatismus steht.
+      Der Platzhalter für die Auftragsnummer ist #NUMMER#.
+    </p>
+    <h4>E-Mail Inhalt Bestätigung Eingang des Gerätes per Post</h4>
+    <p>
+      In der Reparaturansicht steht für die automatisch eingelesenen Reparaturaufträgen eine Funktion zur verfügung, um den Kunden über den
+      Eingang des Gerätes zu informieren.
+      Dabei wird der in diesem Feld angegebene Text verwendet.
+      Der Platzhalter für die Auftragsnummer ist #NUMMER#.
     </p>
     <h2 id="meinprofil">Mein Profil</h2>
     <p>Jeder Mitarbeiter kann diese Seite rechts oben auf jeder Seite aufrufen.</p>
